--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
         @import url("sites/all/modules/contrib/ckeditor/css/ckeditor2c3d.css?ql3p5u");
     </style>
     <style>
-        @import url("sites/all/modules/contrib/apachesolr_autocomplete/apachesolr_autocomplete2c3d.css?ql3p5u");
-        @import url("sites/all/modules/contrib/apachesolr_autocomplete/jquery-autocomplete/jquery.autocomplete2c3d.css?ql3p5u");
+        @import url("modules/contrib/apachesolr_autocomplete/apachesolr_autocomplete2c3d.css?ql3p5u");
+        @import url("modules/contrib/apachesolr_autocomplete/jquery-autocomplete/jquery.autocomplete2c3d.css?ql3p5u");
         @import url("http://collectionsearch.nma.gov.au/profiles/oxide/modules/contrib/ctools/css/ctools.css?ql3p5u");
     </style>
     <style>
-        @import url("sites/all/themes/cs/css/normalize2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/scrollbar2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/carousel2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/tabs2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/pages2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/blocks2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/navigation2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/views-styles2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/forms2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/fields2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/responsive2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/wysiwyg-styles2c3d.css?ql3p5u");
-        @import url("sites/all/themes/cs/css/print2c3d.css?ql3p5u");
+        @import url("cs/css/normalize2c3d.css?ql3p5u");
+        @import url("cs/css/scrollbar2c3d.css?ql3p5u");
+        @import url("cs/css/carousel2c3d.css?ql3p5u");
+        @import url("cs/css/tabs2c3d.css?ql3p5u");
+        @import url("cs/css/pages2c3d.css?ql3p5u");
+        @import url("cs/css/blocks2c3d.css?ql3p5u");
+        @import url("cs/css/navigation2c3d.css?ql3p5u");
+        @import url("cs/css/views-styles2c3d.css?ql3p5u");
+        @import url("cs/css/forms2c3d.css?ql3p5u");
+        @import url("cs/css/fields2c3d.css?ql3p5u");
+        @import url("cs/css/responsive2c3d.css?ql3p5u");
+        @import url("cs/css/wysiwyg-styles2c3d.css?ql3p5u");
+        @import url("cs/css/print2c3d.css?ql3p5u");
     </style>
     <style>
         .spin-size{
@@ -77,24 +77,24 @@
         } catch (e) {}
     </script>
 
-    <script src="sites/all/modules/contrib/jquery_update/replace/jquery/1.8/jquerya532.js?v=1.8.3"></script>
+    <script src="modules/contrib/jquery_update/replace/jquery/1.8/jquerya532.js?v=1.8.3"></script>
     <script src="http://collectionsearch.nma.gov.au/misc/jquery-extend-3.4.0.js?v=1.8.3"></script>
     <script src="http://collectionsearch.nma.gov.au/misc/jquery.once.js?v=1.2"></script>
     <script src="http://collectionsearch.nma.gov.au/misc/drupal.js?ql3p5u"></script>
-    <script src="sites/all/modules/contrib/jquery_update/replace/ui/external/jquery.cookie1683.js?v=67fb34f6a866c40d0570"></script>
-    <script src="sites/all/modules/contrib/jquery_update/replace/misc/jquery.form97e5.js?v=2.69"></script>
+    <script src="modules/contrib/jquery_update/replace/ui/external/jquery.cookie1683.js?v=67fb34f6a866c40d0570"></script>
+    <script src="modules/contrib/jquery_update/replace/misc/jquery.form97e5.js?v=2.69"></script>
     <script src="http://collectionsearch.nma.gov.au/misc/ajax.js?v=7.69"></script>
-    <script src="sites/all/modules/contrib/jquery_update/js/jquery_update241d.js?v=0.0.1"></script>
+    <script src="modules/contrib/jquery_update/js/jquery_update241d.js?v=0.0.1"></script>
     <script src="http://collectionsearch.nma.gov.au/profiles/oxide/modules/contrib/spamspan/spamspan.js?ql3p5u"></script>
-    <script src="sites/all/modules/contrib/apachesolr_autocomplete/apachesolr_autocomplete2c3d.js?ql3p5u"></script>
-    <script src="sites/all/modules/contrib/apachesolr_autocomplete/jquery-autocomplete/jquery.autocomplete2c3d.js?ql3p5u"></script>
+    <script src="modules/contrib/apachesolr_autocomplete/apachesolr_autocomplete2c3d.js?ql3p5u"></script>
+    <script src="modules/contrib/apachesolr_autocomplete/jquery-autocomplete/jquery.autocomplete2c3d.js?ql3p5u"></script>
     <script src="http://collectionsearch.nma.gov.au/misc/progress.js?v=7.69"></script>
-    <script src="sites/all/libraries/jquery.mousewheel/jquery.mousewheel2c3d.js?ql3p5u"></script>
-    <script src="sites/all/libraries/history.js/scripts/bundled/html4%2bhtml5/jquery.history2c3d.js?ql3p5u"></script>
-    <script src="sites/all/modules/custom/nma_cs/js/nma_cs_collections2c3d.js?ql3p5u"></script>
-    <script src="sites/all/modules/contrib/facetapi/facetapi2c3d.js?ql3p5u"></script>
-    <script src="sites/all/modules/custom/nma_solr/js/facet-filter2c3d.js?ql3p5u"></script>
-    <script src="sites/all/modules/google_analytics/googleanalytics2c3d.js?ql3p5u"></script>
+    <script src="libraries/jquery.mousewheel/jquery.mousewheel2c3d.js?ql3p5u"></script>
+    <script src="libraries/history.js/scripts/bundled/html4%2bhtml5/jquery.history2c3d.js?ql3p5u"></script>
+    <script src="modules/custom/nma_cs/js/nma_cs_collections2c3d.js?ql3p5u"></script>
+    <script src="modules/contrib/facetapi/facetapi2c3d.js?ql3p5u"></script>
+    <script src="modules/custom/nma_solr/js/facet-filter2c3d.js?ql3p5u"></script>
+    <script src="modules/google_analytics/googleanalytics2c3d.js?ql3p5u"></script>
     <script>
         (function(i, s, o, g, r, a, m) {
             i["GoogleAnalyticsObject"] = r;
@@ -111,11 +111,11 @@
         });
         ga("send", "pageview");
     </script>
-    <script src="sites/all/libraries/placeholder/jquery.placeholder2c3d.js?ql3p5u"></script>
-    <script src="sites/all/modules/contrib/placeholder/placeholder2c3d.js?ql3p5u"></script>
-    <script src="sites/all/libraries/jquery.lazyload/jquery.lazyload.min2c3d.js?ql3p5u"></script>
-    <script src="sites/all/themes/cs/js/script2c3d.js?ql3p5u"></script>
-    <script src="sites/all/themes/cs/js/aria-role2c3d.js?ql3p5u"></script>
+    <script src="libraries/placeholder/jquery.placeholder2c3d.js?ql3p5u"></script>
+    <script src="modules/contrib/placeholder/placeholder2c3d.js?ql3p5u"></script>
+    <script src="libraries/jquery.lazyload/jquery.lazyload.min2c3d.js?ql3p5u"></script>
+    <script src="cs/js/script2c3d.js?ql3p5u"></script>
+    <script src="cs/js/aria-role2c3d.js?ql3p5u"></script>
     <script>
         jQuery.extend(Drupal.settings, {
             "basePath": "\/",
@@ -125,30 +125,30 @@
                 "theme_token": "t2IvLQY--4rJRFytvHF9w8o6t5RbjbwkGkY9k1vvHLo",
                 "jquery_version": "1.8",
                 "js": {
-                    "sites\/all\/modules\/contrib\/jquery_update\/replace\/jquery\/1.8\/jquery.js": 1,
+                    "modules\/contrib\/jquery_update\/replace\/jquery\/1.8\/jquery.js": 1,
                     "misc\/jquery-extend-3.4.0.js": 1,
                     "misc\/jquery.once.js": 1,
                     "misc\/drupal.js": 1,
-                    "sites\/all\/modules\/contrib\/jquery_update\/replace\/ui\/external\/jquery.cookie.js": 1,
-                    "sites\/all\/modules\/contrib\/jquery_update\/replace\/misc\/jquery.form.js": 1,
+                    "modules\/contrib\/jquery_update\/replace\/ui\/external\/jquery.cookie.js": 1,
+                    "modules\/contrib\/jquery_update\/replace\/misc\/jquery.form.js": 1,
                     "misc\/ajax.js": 1,
-                    "sites\/all\/modules\/contrib\/jquery_update\/js\/jquery_update.js": 1,
-                    "profiles\/oxide\/modules\/contrib\/spamspan\/spamspan.js": 1,
-                    "sites\/all\/modules\/contrib\/apachesolr_autocomplete\/apachesolr_autocomplete.js": 1,
-                    "sites\/all\/modules\/contrib\/apachesolr_autocomplete\/jquery-autocomplete\/jquery.autocomplete.js": 1,
+                    "modules\/contrib\/jquery_update\/js\/jquery_update.js": 1,
+                    "modules\/contrib\/spamspan\/spamspan.js": 1,
+                    "modules\/contrib\/apachesolr_autocomplete\/apachesolr_autocomplete.js": 1,
+                    "modules\/contrib\/apachesolr_autocomplete\/jquery-autocomplete\/jquery.autocomplete.js": 1,
                     "misc\/progress.js": 1,
-                    "sites\/all\/libraries\/jquery.mousewheel\/jquery.mousewheel.js": 1,
-                    "sites\/all\/libraries\/history.js\/scripts\/bundled\/html4+html5\/jquery.history.js": 1,
-                    "sites\/all\/modules\/custom\/nma_cs\/js\/nma_cs_collections.js": 1,
-                    "sites\/all\/modules\/contrib\/facetapi\/facetapi.js": 1,
-                    "sites\/all\/modules\/custom\/nma_solr\/js\/facet-filter.js": 1,
-                    "sites\/all\/modules\/google_analytics\/googleanalytics.js": 1,
+                    "libraries\/jquery.mousewheel\/jquery.mousewheel.js": 1,
+                    "libraries\/history.js\/scripts\/bundled\/html4+html5\/jquery.history.js": 1,
+                    "modules\/custom\/nma_cs\/js\/nma_cs_collections.js": 1,
+                    "modules\/contrib\/facetapi\/facetapi.js": 1,
+                    "modules\/custom\/nma_solr\/js\/facet-filter.js": 1,
+                    "modules\/google_analytics\/googleanalytics.js": 1,
                     "0": 1,
-                    "sites\/all\/libraries\/placeholder\/jquery.placeholder.js": 1,
-                    "sites\/all\/modules\/contrib\/placeholder\/placeholder.js": 1,
-                    "sites\/all\/libraries\/jquery.lazyload\/jquery.lazyload.min.js": 1,
-                    "sites\/all\/themes\/cs\/js\/script.js": 1,
-                    "sites\/all\/themes\/cs\/js\/aria-role.js": 1
+                    "libraries\/placeholder\/jquery.placeholder.js": 1,
+                    "modules\/contrib\/placeholder\/placeholder.js": 1,
+                    "libraries\/jquery.lazyload\/jquery.lazyload.min.js": 1,
+                    "cs\/js\/script.js": 1,
+                    "cs\/js\/aria-role.js": 1
                 },
                 "css": {
                     "modules\/system\/system.base.css": 1,
@@ -164,30 +164,30 @@
                     "modules\/search\/search.css": 1,
                     "modules\/user\/user.css": 1,
                     "profiles\/oxide\/modules\/contrib\/views\/css\/views.css": 1,
-                    "sites\/all\/modules\/contrib\/ckeditor\/css\/ckeditor.css": 1,
-                    "sites\/all\/modules\/contrib\/apachesolr_autocomplete\/apachesolr_autocomplete.css": 1,
-                    "sites\/all\/modules\/contrib\/apachesolr_autocomplete\/jquery-autocomplete\/jquery.autocomplete.css": 1,
+                    "modules\/contrib\/ckeditor\/css\/ckeditor.css": 1,
+                    "modules\/contrib\/apachesolr_autocomplete\/apachesolr_autocomplete.css": 1,
+                    "modules\/contrib\/apachesolr_autocomplete\/jquery-autocomplete\/jquery.autocomplete.css": 1,
                     "profiles\/oxide\/modules\/contrib\/ctools\/css\/ctools.css": 1,
-                    "sites\/all\/themes\/cs\/system.menus.css": 1,
-                    "sites\/all\/themes\/cs\/css\/normalize.css": 1,
-                    "sites\/all\/themes\/cs\/css\/scrollbar.css": 1,
-                    "sites\/all\/themes\/cs\/css\/carousel.css": 1,
-                    "sites\/all\/themes\/cs\/css\/wireframes.css": 1,
-                    "sites\/all\/themes\/cs\/css\/layouts\/responsive-sidebars.css": 1,
-                    "sites\/all\/themes\/cs\/css\/page-backgrounds.css": 1,
-                    "sites\/all\/themes\/cs\/css\/tabs.css": 1,
-                    "sites\/all\/themes\/cs\/css\/pages.css": 1,
-                    "sites\/all\/themes\/cs\/css\/blocks.css": 1,
-                    "sites\/all\/themes\/cs\/css\/navigation.css": 1,
-                    "sites\/all\/themes\/cs\/css\/views-styles.css": 1,
-                    "sites\/all\/themes\/cs\/css\/nodes.css": 1,
-                    "sites\/all\/themes\/cs\/css\/comments.css": 1,
-                    "sites\/all\/themes\/cs\/css\/forms.css": 1,
-                    "sites\/all\/themes\/cs\/css\/fields.css": 1,
-                    "sites\/all\/themes\/cs\/css\/components.css": 1,
-                    "sites\/all\/themes\/cs\/css\/responsive.css": 1,
-                    "sites\/all\/themes\/cs\/css\/wysiwyg-styles.css": 1,
-                    "sites\/all\/themes\/cs\/css\/print.css": 1
+                    "cs\/system.menus.css": 1,
+                    "cs\/css\/normalize.css": 1,
+                    "cs\/css\/scrollbar.css": 1,
+                    "cs\/css\/carousel.css": 1,
+                    "cs\/css\/wireframes.css": 1,
+                    "cs\/css\/layouts\/responsive-sidebars.css": 1,
+                    "cs\/css\/page-backgrounds.css": 1,
+                    "cs\/css\/tabs.css": 1,
+                    "cs\/css\/pages.css": 1,
+                    "cs\/css\/blocks.css": 1,
+                    "cs\/css\/navigation.css": 1,
+                    "cs\/css\/views-styles.css": 1,
+                    "cs\/css\/nodes.css": 1,
+                    "cs\/css\/comments.css": 1,
+                    "cs\/css\/forms.css": 1,
+                    "cs\/css\/fields.css": 1,
+                    "cs\/css\/components.css": 1,
+                    "cs\/css\/responsive.css": 1,
+                    "cs\/css\/wysiwyg-styles.css": 1,
+                    "cs\/css\/print.css": 1
                 }
             },
             "admin_menu": {
