--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8" />
     
 
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Collections</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
