--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
     <script src="libraries/placeholder/jquery.placeholder2c3d.js?ql3p5u"></script>
     <script src="modules/contrib/placeholder/placeholder2c3d.js?ql3p5u"></script>
     <script src="libraries/jquery.lazyload/jquery.lazyload.min2c3d.js?ql3p5u"></script>
-    <script src="cs/js/script2c3d.js?ql3p5u"></script>
-    <script src="cs/js/aria-role2c3d.js?ql3p5u"></script>
+    <script src="js/script2c3d.js?ql3p5u"></script>
+    <script src="js/aria-role2c3d.js?ql3p5u"></script>
     <script>
         jQuery.extend(Drupal.settings, {
             "basePath": "\/",
