--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ left: 50%;
     </nav>
     <div class="side-menu">
         <br>
-        <a href="collections.html"><i class="fa fa-home"></i><span>Home</span></a>
-        <a href="collections.html"><i class="fa fa-question-circle"></i><span>Whats New</span></a>
-        <a href="collections.html"><i class="fa fa-database"></i><span>Collections</span></a>
+        <a href="index.html"><i class="fa fa-home"></i><span>Home</span></a>
+        <a href="index.html"><i class="fa fa-question-circle"></i><span>Whats New</span></a>
+        <a href="index.html"><i class="fa fa-database"></i><span>Collections</span></a>
         <a href="about.html"><i class="fa fa-info-circle"></i><span>About</span></a>
         <a href="help.html"><i class="fa fa-book"></i><span>Help</span></a>
     </div>
