--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <div class="content">
             <h2>Welcome to Collection Explorer</h2>
             <br>
-            <p>This site allows visitors to browse and discover the National Museum of Australia’s online collection. About 40 per cent of the collection is available online. New object records and sets are added regularly and existing information is being
+            <p>This site allows visitors to browse and discover the https://developer.vic.gov.au/ online collection. About 40 per cent of the collection is available online. New object records and sets are added regularly and existing information is being
                 enhanced.
             </p>
             <p>The Museum’s collection covers Aboriginal and Torres Strait Islander history and culture, Australia’s history and society since 1788 and the interaction of people with the environment.</p>
