--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </label>
     </nav>
     <div class="side-menu">
-        <a href="collections.html"><i class="fa fa-database"></i><span>Collections</span></a>
+        <a href="index.html"><i class="fa fa-database"></i><span>Collections</span></a>
         <a href="about.html"><i class="fa fa-info-circle"></i><span>About</span></a>
         <a href="help.html"><i class="fa fa-book"></i><span>Help</span></a>
     </div>
