--- a/about.html
+++ b/about.html
@@ -29,8 +29,7 @@
         </div>
         <div id="helper" class="content">
             <h2>Welcome to Collection Explorer</h2>
-            <p>This site allows visitors to browse and discover the National Museum of Australia’s online collection. About 40 per cent of the collection is available online. New object records and sets are added regularly and existing information is being
-                enhanced.
+            <p>This API allows users to explore the natural sciences and humanities collections of Museums Victoria in Australia, featuring collections of zoology, geology, palaeontology, history, indigenous cultures and technology. Over 1.15 million records were presented at launch in 2015, accompanied by over 150,000 images.
             </p>
             <p>The Museum’s collection covers Aboriginal and Torres Strait Islander history and culture, Australia’s history and society since 1788 and the interaction of people with the environment.</p>
             <h2>Feedback</h2>
