--- a/about.html
+++ b/about.html
@@ -32,8 +32,14 @@
             <p>This API allows users to explore the natural sciences and humanities collections of Museums Victoria in Australia, featuring collections of zoology, geology, palaeontology, history, indigenous cultures and technology. Over 1.15 million records were presented at launch in 2015, accompanied by over 150,000 images.
             </p>
             <p>The Museum’s collection covers Aboriginal and Torres Strait Islander history and culture, Australia’s history and society since 1788 and the interaction of people with the environment.</p>
-            <h2>Feedback</h2>
-            <p>If you have questions, more information about the collection or believe there is an error, please fill in our feedback form, noting the object number or URL.</p>
+            <h2>Terms of Use, Copyright and Attribution</h2>
+            <p>We wish to encourage reuse and sharing of content.
+
+The elements of each record that are defined as data carry a Creative Commons Zero (CC0) license.
+
+All the text content and information written by curators, collection managers, and others is released under a Creative Commons Attribution 4.0 International (CC- BY) licence.
+
+Images, sounds and audio-visual material are licensed separately to text. We apply open licenses wherever possible, including marking images as Public Domain as applicable. You will find over 100,000 openly licensed and public domain images in this API.</p>
 
             <h2>Warning</h2>
             <p>This site contains names and images of deceased Aboriginal and Torres Strait Islander people. Some older records contain images and terms that are now considered inappropriate and do not reflect the views of the National Museum.</p>
