--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <input type="checkbox" id="menu">
     <nav>
-        <label>Collections</label>
+        <label>Museums Victoria Collections</label>
         <label for="menu" class="menu-bar">
         <i class="fa fa-bars"></i>
       </label>
