--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="extra"></div>
         <div class="banner">
             <div class="heading">
-                <h1>Collections</h1>
+                <h1>Museums Victoria Collections</h1>
             </div>
             <div class="myrow ml-5 mt-4">
                 <div>
