--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <input type="checkbox" id="menu">
     <nav>
-        <label>Collections</label>
+        <label>Museums Victoria Collections</label>
         <label for="menu" class="menu-bar"> 
         <i class="fa fa-bars"></i>
       </label>
