--- a/collection-details.html
+++ b/collection-details.html
@@ -12,7 +12,7 @@
     <div id="loader" class="spinner-border spin-size text-success w-25 h-25 mt-5" role="status"></div>
     <input type="checkbox" id="menu">
     <nav>
-        <label>Collections</label>
+        <label>Museums Victoria Collections</label>
         <label for="menu" class="menu-bar"> 
         <i class="fa fa-bars"></i>
       </label>
