--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       </label>
     </nav>
     <div class="side-menu">
-        <a href="collections.html"><i class="fa fa-database"></i><span>Collections</span></a>
+        <a href="index.html"><i class="fa fa-database"></i><span>Collections</span></a>
         <a href="about.html"><i class="fa fa-info-circle"></i><span>About</span></a>
         <a href="help.html"><i class="fa fa-book"></i><span>Help</span></a>
     </div>
@@ -41,19 +41,8 @@ All the text content and information written by curators, collection managers, a
 
 Images, sounds and audio-visual material are licensed separately to text. We apply open licenses wherever possible, including marking images as Public Domain as applicable. You will find over 100,000 openly licensed and public domain images in this API.</p>
 
-            <h2>Warning</h2>
-            <p>This site contains names and images of deceased Aboriginal and Torres Strait Islander people. Some older records contain images and terms that are now considered inappropriate and do not reflect the views of the National Museum.</p>
-
-            <h2>Copyright</h2>
-
-            <p>The Museum does not own copyright for all Collection Explorer images. The copyright status falls into the categories below.</p>
-            <ul>
-                <li><strong>Public Domain:</strong> You are free to re-use the image without permission, can download a low resolution image or purchase a higher resolution image.</li>
-                <li><strong>Creative Commons ShareAlike</strong>: You can use the image for non-commercial and commercial uses under the CC BY-SA 4.0 license, download a low resolution image or purchase a higher resolution image.</li>
-                <li><strong>Creative Commons NonCommercial ShareAlike</strong>: You can  use the image for non-commercial uses under the CC BY-NC-SA 4.0 license, download a low resolution image, purchase a higher resolution image or request commercial use
-                    of the image.</li>
-                <li><strong>Other</strong>: When the copyright status is not stated, you need to request permission to use the image and can do so by clicking on the ‘Request image’ button.</li>
-            </ul>
+          
+            
         </div>
     </div>
 </body>
