--- a/help.html
+++ b/help.html
@@ -10,13 +10,13 @@
 <body>
     <input type="checkbox" id="menu">
     <nav>
-        <label>Collections</label>
+        <label>Museums Victoria Collections</label>
         <label for="menu" class="menu-bar"> 
         <i class="fa fa-bars"></i>
       </label>
     </nav>
     <div class="side-menu">
-        <a href="collections.html"><i class="fa fa-database"></i><span>Collections</span></a>
+        <a href="index.html"><i class="fa fa-database"></i><span>Collections</span></a>
         <a href="about.html"><i class="fa fa-info-circle"></i><span>About</span></a>
         <a href="help.html"><i class="fa fa-book"></i><span>Help</span></a>
     </div>
