--- a/help.html
+++ b/help.html
@@ -29,7 +29,7 @@
         </div>
         <div id="helper" class="content">
             <h2>How does search work?</h2>
-            <p>Collection Explorer search is a quick way to browse the National Museum's online collection across all information on object record pages. Enter one or two terms in the search box to start exploring. Search is not case sensitive.</p>
+            <p>Collection Explorer search is a quick way to browse the Museums Victoria Collectionscollection across all information on object record pages. Enter one or two terms in the search box to start exploring. Search is not case sensitive.</p>
 
             <h3>Sorting your results</h3>
             <p>The homepage is a random selection by default. Change the type of sort using the drop down menu at the top of the page to sort in these categories.</p>
